src/test/deca/context/invalid/created/SansObjet/WrongTypeArithmeticExp.deca
// Description:
//    Teste l'addition d'un entier et d'un booléen
// Resultats:
//    WrongTypeArithmeticExp.deca:9:12: Error: Incompatible types for arithmetic operation: int + boolean

{
    int a = 1;
    boolean b = false;
    print(a + b);
}